deploy/openshift/deploymentconfig.yml

apiVersion: v1
kind: DeploymentConfig
metadata:
  name: transtats-web
  labels:
    app: transtats
    service: web
spec:
  replicas: 2
  selector:
    app: transtats
    service: web
  template:
    metadata:
      labels:
        app: transtats
        service: web
    spec:
      containers:
      - name: web
        image: transtats
        ports:
        - containerPort: 8080
        readinessProbe:
          timeoutSeconds: 1
          initialDelaySeconds: 5
          httpGet:
            path: /health
            port: 8080
        livenessProbe:
          timeoutSeconds: 1
          initialDelaySeconds: 30
          httpGet:
            path: /health
            port: 8080
        resources:
          limits:
            memory: 384Mi
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - web
      from:
        kind: ImageStreamTag
        name: transtats:latest
  - type: ConfigChange
