deploy/openshift/route.yml
apiVersion: v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 7m
  name: transtats-web
  labels:
    app: transtats
spec:
  #host: app.stg.transtats.org
  port:
    targetPort: web
  to:
    kind: Service
    name: transtats-web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
